Refactor: add permission and role